exports[`(.not).toHavePartialContentStatus > using axios > .not.toHavePartialContentStatus > fails when response have status code 206 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePartialContentStatus()</intensity>

Expected status code to not be 206 received:
  <red>206</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 206,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePartialContentStatus > using axios > .toHavePartialContentStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePartialContentStatus()</intensity>

Expected status code to be 206 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePartialContentStatus > using got > .not.toHavePartialContentStatus > fails when response have status code 206 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePartialContentStatus()</intensity>

Expected status code to not be 206 received:
  <red>206</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 206,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHavePartialContentStatus > using got > .toHavePartialContentStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePartialContentStatus()</intensity>

Expected status code to be 206 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
